RESOLVED FIXED 77430
[CSSRegions] Assert failure in RenderView::computeRectForRepaint
https://bugs.webkit.org/show_bug.cgi?id=77430
Summary [CSSRegions] Assert failure in RenderView::computeRectForRepaint
Raul Hudea
Reported 2012-01-31 06:24:52 PST
Using imbricated flow threads triggers an assert in RenderView::computeRectForRepaint Load the attached file to get the assert.
Attachments
test case (2.14 KB, text/html)
2012-01-31 06:26 PST, Raul Hudea
no flags
Patch (8.46 KB, patch)
2012-01-31 10:44 PST, Raul Hudea
no flags
Raul Hudea
Comment 1 2012-01-31 06:26:16 PST
Created attachment 124717 [details] test case
Raul Hudea
Comment 2 2012-01-31 10:44:24 PST
WebKit Review Bot
Comment 3 2012-01-31 10:47:31 PST
Attachment 124772 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 4 2012-02-01 13:41:34 PST
Comment on attachment 124772 [details] Patch r=me
WebKit Review Bot
Comment 5 2012-02-02 02:25:44 PST
Comment on attachment 124772 [details] Patch Clearing flags on attachment: 124772 Committed r106544: <http://trac.webkit.org/changeset/106544>
WebKit Review Bot
Comment 6 2012-02-02 02:25:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.