Regions should ignore the saved currentRenderFlowThread during repainting because if there are imbricated flow threads, it might end using the wrong one.

[CSSRegions] Assert failure in RenderView::computeRectForRepaint
https://bugs.webkit.org/show_bug.cgi?id=77430

Patch by Raul Hudea <rhudea@adobe.com> on 2012-02-02
Reviewed by David Hyatt.

Source/WebCore:

Test: fast/regions/imbricated-flow-threads-crash.html

* rendering/RenderFlowThread.cpp:
(CurrentRenderFlowThreadDisabler):
(WebCore::CurrentRenderFlowThreadDisabler::CurrentRenderFlowThreadDisabler):
(WebCore::CurrentRenderFlowThreadDisabler::~CurrentRenderFlowThreadDisabler):
(WebCore):
(WebCore::RenderFlowThread::repaintRectangleInRegions):

LayoutTests:

* fast/regions/imbricated-flow-threads-crash-expected.txt: Added.
* fast/regions/imbricated-flow-threads-crash.html: Added.

Canonical link: https://commits.webkit.org/94488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106544 268f45cc-cd09-0410-ab3c-d52691b4dbfc